--- a/static/css/calendar.css
+++ b/static/css/calendar.css
@@ -606,16 +606,18 @@
 
 .modal-body {
     padding: 24px 24px;
-    text-align: left;
-    font-size: 16px;
-    color: #374151;
-    line-height: 1.5;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .modal-footer {
     padding: 20px 24px;
     background-color: #f9fafb;
     border-top: 1px solid #f3f4f6;
+    display: flex;
+    justify-content: flex-end; 
+    gap: 8px; /* 버튼 사이 간격 */
 }
 
 
